@@ -19,6 +19,8 @@ POSTGRES_BASE_IMAGE_175=postgres:17.5-bullseye
 #Source images
 DOCKER_IMAGE_JAVA11JRE_NAME=icellmobilsoft/base-java11jre
 DOCKER_IMAGE_JAVA11JRE=${DOCKER_IMAGE_JAVA11JRE_NAME}:${BASE_IMAGE_VERSION}
+DOCKER_IMAGE_JAVA21JRE_NAME=dockerhub-dockerio.icellmobilsoft.hu/icellmobilsoft/base-java21jre
+DOCKER_IMAGE_JAVA21JRE=${DOCKER_IMAGE_JAVA21JRE_NAME}:${BASE_IMAGE_VERSION}
 
 
 ###############################################################################
@@ -26,6 +28,9 @@ DOCKER_IMAGE_JAVA11JRE=${DOCKER_IMAGE_JAVA11JRE_NAME}:${BASE_IMAGE_VERSION}
 ###############################################################################
 DOCKER_IMAGE_LIQUIBASE_NAME=icellmobilsoft/db-base-liquibase
 DOCKER_IMAGE_LIQUIBASE=${DOCKER_IMAGE_LIQUIBASE_NAME}:${VERSION}
+
+DOCKER_IMAGE_LIQUIBASE_NAME_431=dockerhub.icellmobilsoft.hu/db-dwh/liquibase_431
+DOCKER_IMAGE_LIQUIBASE_431=${DOCKER_IMAGE_LIQUIBASE_NAME_431}:${VERSION}
 
 DOCKER_IMAGE_POSTGRES_NAME_148=icellmobilsoft/db-base-postgres_148
 DOCKER_IMAGE_POSTGRES_148=${DOCKER_IMAGE_POSTGRES_NAME_148}:${VERSION}
