@@ -34,7 +34,7 @@ docker compose --env-file .env -f ./docker-compose.yml build --no-cache
 To build only a specified image local testing from the repository's root directory:
 [source,bash]
 ----
-docker compose --env -file .env -f ./docker-compose.yml build --no-cache <service_name>
+docker compose --env-file .env -f ./docker-compose.yml build --no-cache <service_name>
 ----
 To start a local database from an image:
 
